syntax = "proto3";

package arithmetic;

option go_package = "github.com/devkolasani/go-grpc-example/arithmetic";

enum OperationType {
	ADD = 0;
	SUB = 1;
}

message OperationRequest {
	int64 operand_one = 1;
	int64 operand_two = 2;
	OperationType operation_type = 3;
}

message OperationResponse {
	int64 result = 1;
}

service Arithmetic {
	rpc Operation (OperationRequest) returns (OperationResponse) {}
}